--- a/index.html
+++ b/index.html
@@ -375,5 +375,29 @@
             });
         }
     </script>
+    <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyB3FUYiVZpP9F943aCLJZJ3N8J7RcpRfDY",
+    authDomain: "horarios2024-657a6.firebaseapp.com",
+    databaseURL: "https://horarios2024-657a6-default-rtdb.firebaseio.com",
+    projectId: "horarios2024-657a6",
+    storageBucket: "horarios2024-657a6.appspot.com",
+    messagingSenderId: "445570564452",
+    appId: "1:445570564452:web:287f3f2326b2722f437a71",
+    measurementId: "G-ZQRHDR7STP"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 </body>
 </html>
