--- a/index.html
+++ b/index.html
@@ -187,88 +187,87 @@
 <body>
     <div class="container">
         <table id="horarioTable">
-        <tr>
-            <th>Hora</th>
-            <th>Lunes</th>
-            <th>Martes</th>
-            <th>Miércoles</th>
-            <th>Jueves</th>
-            <th>Viernes</th>
-        </tr>
-        <tr>
-            <td>14:00 - 15:00</td>
-            <td class="empty-cell"></td>
-            <td><button class="btn materia-1" onclick="showInfo('Taller de Emprendedorismo')">Taller de Emprendedorismo</button></td>
-            <td class="empty-cell"></td>
-            <td class="empty-cell"></td>
-            <td class="empty-cell"></td>
-        </tr>
-        <tr>
-    <td>15:00 - 16:00</td>
-    <td class="empty-cell"></td>
-    <td><button class="btn materia-1" onclick="showInfo('Taller de Emprendedorismo')">Taller de Emprendedorismo</button></td>
-    <td class="empty-cell"></td>
-    <td class="empty-cell"></td>
-    <td class="empty-cell"></td>
-</tr>
-<tr>
-    <td>16:00 - 17:00</td>
-    <td class="empty-cell"></td>
-    <td><button class="btn materia-1" onclick="showInfo('Taller de Emprendedorismo')">Taller de Emprendedorismo</button></td>
-    <td class="empty-cell"></td>
-    <td class="empty-cell"></td>
-    <td class="empty-cell"></td>
-</tr>
-<tr>
-    <td>17:00 - 18:00</td>
-    <td class="empty-cell"></td>
-    <td><button class="btn materia-1" onclick="showInfo('Taller de Emprendedorismo')">Taller de Emprendedorismo</button></td>
-    <td class="empty-cell"></td>
-    <td class="empty-cell"></td>
-    <td class="empty-cell"></td>
-</tr>
-<tr>
-    <td>18:00 - 19:00</td>
-    <td><button class="btn materia-2" onclick="showInfo('Seguridad Informática y Criptografía')">Seguridad Informática y Criptografía</button></td>
-    <td><button class="btn materia-2" onclick="showInfo('Auditoría Informática')">Auditoría Informática</button></td>
-    <td><button class="btn materia-3" onclick="showInfo('Gerenciamiento y Evaluación de Proyectos')">Gerenciamiento y Evaluación de Proyectos</button></td>
-    <td><button class="btn materia-4" onclick="showInfo('Proyecto Integral de Desarrollo')">Proyecto Integral de Desarrollo</button></td>
-    <td><button class="btn materia-5" onclick="showInfo('Economía de la Empresa')">Economía de la Empresa</button></td>
-</tr>
-<tr>
-    <td>19:00 - 20:00</td>
-    <td><button class="btn materia-2" onclick="showInfo('Seguridad Informática y Criptografía')">Seguridad Informática y Criptografía</button></td>
-    <td><button class="btn materia-2" onclick="showInfo('Auditoría Informática')">Auditoría Informática</button></td>
-    <td><button class="btn materia-3" onclick="showInfo('Gerenciamiento y Evaluación de Proyectos')">Gerenciamiento y Evaluación de Proyectos</button></td>
-    <td><button class="btn materia-4" onclick="showInfo('Proyecto Integral de Desarrollo')">Proyecto Integral de Desarrollo</button></td>
-    <td><button class="btn materia-5" onclick="showInfo('Economía de la Empresa')">Economía de la Empresa</button></td>
-</tr>
-<tr>
-    <td>20:00 - 21:00</td>
-    <td><button class="btn materia-2" onclick="showInfo('Seguridad Informática y Criptografía')">Seguridad Informática y Criptografía</button></td>
-    <td><button class="btn materia-2" onclick="showInfo('Auditoría Informática')">Auditoría Informática</button></td>
-    <td><button class="btn materia-3" onclick="showInfo('Gerenciamiento y Evaluación de Proyectos')">Gerenciamiento y Evaluación de Proyectos</button></td>
-    <td><button class="btn materia-4" onclick="showInfo('Proyecto Integral de Desarrollo')">Proyecto Integral de Desarrollo</button></td>
-    <td><button class="btn materia-5" onclick="showInfo('Economía de la Empresa')">Economía de la Empresa</button></td>
-</tr>
-<tr>
-    <td>21:00 - 22:00</td>
-    <td><button class="btn materia-2" onclick="showInfo('Seguridad Informática y Criptografía')">Seguridad Informática y Criptografía</button></td>
-    <td><button class="btn materia-2" onclick="showInfo('Auditoría Informática')">Auditoría Informática</button></td>
-    <td><button class="btn materia-3" onclick="showInfo('Gerenciamiento y Evaluación de Proyectos')">Gerenciamiento y Evaluación de Proyectos</button></td>
-    <td><button class="btn materia-4" onclick="showInfo('Proyecto Integral de Desarrollo')">Proyecto Integral de Desarrollo</button></td>
-    <td><button class="btn materia-5" onclick="showInfo('Economía de la Empresa')">Economía de la Empresa</button></td>
-</tr>
-<tr>
-    <td>22:00 - 23:00</td>
-    <td><button class="btn materia-2" onclick="showInfo('Seguridad Informática y Criptografía')">Seguridad Informática y Criptografía</button></td>
-    <td><button class="btn materia-2" onclick="showInfo('Auditoría Informática')">Auditoría Informática</button></td>
-    <td><button class="btn materia-3" onclick="showInfo('Gerenciamiento y Evaluación de Proyectos')">Gerenciamiento y Evaluación de Proyectos</button></td>
-    <td><button class="btn materia-4" onclick="showInfo('Proyecto Integral de Desarrollo')">Proyecto Integral de Desarrollo</button></td>
-    <td><button class="btn materia-5" onclick="showInfo('Economía de la Empresa')">Economía de la Empresa</button></td>
-</tr>
-
-    </table>
+            <tr>
+                <th>Hora</th>
+                <th>Lunes</th>
+                <th>Martes</th>
+                <th>Miércoles</th>
+                <th>Jueves</th>
+                <th>Viernes</th>
+            </tr>
+            <tr>
+                <td>14:00 - 15:00</td>
+                <td class="empty-cell"></td>
+                <td><button class="btn materia-1" onclick="showInfo('Taller de Emprendedorismo')">Taller de Emprendedorismo</button></td>
+                <td class="empty-cell"></td>
+                <td class="empty-cell"></td>
+                <td class="empty-cell"></td>
+            </tr>
+            <tr>
+                <td>15:00 - 16:00</td>
+                <td class="empty-cell"></td>
+                <td><button class="btn materia-1" onclick="showInfo('Taller de Emprendedorismo')">Taller de Emprendedorismo</button></td>
+                <td class="empty-cell"></td>
+                <td class="empty-cell"></td>
+                <td class="empty-cell"></td>
+            </tr>
+            <tr>
+                <td>16:00 - 17:00</td>
+                <td class="empty-cell"></td>
+                <td><button class="btn materia-1" onclick="showInfo('Taller de Emprendedorismo')">Taller de Emprendedorismo</button></td>
+                <td class="empty-cell"></td>
+                <td class="empty-cell"></td>
+                <td class="empty-cell"></td>
+            </tr>
+            <tr>
+                <td>17:00 - 18:00</td>
+                <td class="empty-cell"></td>
+                <td><button class="btn materia-1" onclick="showInfo('Taller de Emprendedorismo')">Taller de Emprendedorismo</button></td>
+                <td class="empty-cell"></td>
+                <td class="empty-cell"></td>
+                <td class="empty-cell"></td>
+            </tr>
+            <tr>
+                <td>18:00 - 19:00</td>
+                <td><button class="btn materia-2" onclick="showInfo('Seguridad Informática y Criptografía')">Seguridad Informática y Criptografía</button></td>
+                <td><button class="btn materia-2" onclick="showInfo('Auditoría Informática')">Auditoría Informática</button></td>
+                <td><button class="btn materia-3" onclick="showInfo('Gerenciamiento y Evaluación de Proyectos')">Gerenciamiento y Evaluación de Proyectos</button></td>
+                <td><button class="btn materia-4" onclick="showInfo('Proyecto Integral de Desarrollo')">Proyecto Integral de Desarrollo</button></td>
+                <td><button class="btn materia-5" onclick="showInfo('Economía de la Empresa')">Economía de la Empresa</button></td>
+            </tr>
+            <tr>
+                <td>19:00 - 20:00</td>
+                <td><button class="btn materia-2" onclick="showInfo('Seguridad Informática y Criptografía')">Seguridad Informática y Criptografía</button></td>
+                <td><button class="btn materia-2" onclick="showInfo('Auditoría Informática')">Auditoría Informática</button></td>
+                <td><button class="btn materia-3" onclick="showInfo('Gerenciamiento y Evaluación de Proyectos')">Gerenciamiento y Evaluación de Proyectos</button></td>
+                <td><button class="btn materia-4" onclick="showInfo('Proyecto Integral de Desarrollo')">Proyecto Integral de Desarrollo</button></td>
+                <td><button class="btn materia-5" onclick="showInfo('Economía de la Empresa')">Economía de la Empresa</button></td>
+            </tr>
+            <tr>
+                <td>20:00 - 21:00</td>
+                <td><button class="btn materia-2" onclick="showInfo('Seguridad Informática y Criptografía')">Seguridad Informática y Criptografía</button></td>
+                <td><button class="btn materia-2" onclick="showInfo('Auditoría Informática')">Auditoría Informática</button></td>
+                <td><button class="btn materia-3" onclick="showInfo('Gerenciamiento y Evaluación de Proyectos')">Gerenciamiento y Evaluación de Proyectos</button></td>
+                <td><button class="btn materia-4" onclick="showInfo('Proyecto Integral de Desarrollo')">Proyecto Integral de Desarrollo</button></td>
+                <td><button class="btn materia-5" onclick="showInfo('Economía de la Empresa')">Economía de la Empresa</button></td>
+            </tr>
+            <tr>
+                <td>21:00 - 22:00</td>
+                <td><button class="btn materia-2" onclick="showInfo('Seguridad Informática y Criptografía')">Seguridad Informática y Criptografía</button></td>
+                <td><button class="btn materia-2" onclick="showInfo('Auditoría Informática')">Auditoría Informática</button></td>
+                <td><button class="btn materia-3" onclick="showInfo('Gerenciamiento y Evaluación de Proyectos')">Gerenciamiento y Evaluación de Proyectos</button></td>
+                <td><button class="btn materia-4" onclick="showInfo('Proyecto Integral de Desarrollo')">Proyecto Integral de Desarrollo</button></td>
+                <td><button class="btn materia-5" onclick="showInfo('Economía de la Empresa')">Economía de la Empresa</button></td>
+            </tr>
+            <tr>
+                <td>22:00 - 23:00</td>
+                <td><button class="btn materia-2" onclick="showInfo('Seguridad Informática y Criptografía')">Seguridad Informática y Criptografía</button></td>
+                <td><button class="btn materia-2" onclick="showInfo('Auditoría Informática')">Auditoría Informática</button></td>
+                <td><button class="btn materia-3" onclick="showInfo('Gerenciamiento y Evaluación de Proyectos')">Gerenciamiento y Evaluación de Proyectos</button></td>
+                <td><button class="btn materia-4" onclick="showInfo('Proyecto Integral de Desarrollo')">Proyecto Integral de Desarrollo</button></td>
+                <td><button class="btn materia-5" onclick="showInfo('Economía de la Empresa')">Economía de la Empresa</button></td>
+            </tr>
+        </table>
 
         <div id="infoModule">
             <button class="close-btn" onclick="closeInfo()">X</button>
@@ -319,12 +318,72 @@
       const app = initializeApp(firebaseConfig);
       const analytics = getAnalytics(app);
       const db = getFirestore(app);
-
-      // Ahora no necesitas incluir ninguna función aquí, ya que estarán en el bloque de script global
     </script>
 
     <script>
-      // Mueve todas las funciones que deben ser accesibles globalmente fuera del módulo
+      // Definición de infoData con la información de las materias
+      const infoData = {
+        "Taller de Emprendedorismo": {
+          horario: "Martes 14:00 - 18:00",
+          parcial: "15 de Octubre",
+          recuperatorio: "5 de Noviembre",
+          final: "20 de Diciembre",
+          profesores: "Prof. Juan Pérez",
+          email: "juan.perez@ejemplo.com",
+          comentarios: [],
+          tareas: []
+        },
+        "Seguridad Informática y Criptografía": {
+          horario: "Lunes 18:00 - 23:00",
+          parcial: "17 de Octubre",
+          recuperatorio: "7 de Noviembre",
+          final: "22 de Diciembre",
+          profesores: "Prof. María García",
+          email: "maria.garcia@ejemplo.com",
+          comentarios: [],
+          tareas: []
+        },
+        "Auditoría Informática": {
+          horario: "Martes 18:00 - 23:00",
+          parcial: "18 de Octubre",
+          recuperatorio: "8 de Noviembre",
+          final: "23 de Diciembre",
+          profesores: "Prof. Carlos Martínez",
+          email: "carlos.martinez@ejemplo.com",
+          comentarios: [],
+          tareas: []
+        },
+        "Gerenciamiento y Evaluación de Proyectos": {
+          horario: "Miércoles 18:00 - 23:00",
+          parcial: "19 de Octubre",
+          recuperatorio: "9 de Noviembre",
+          final: "24 de Diciembre",
+          profesores: "Prof. Ana López",
+          email: "ana.lopez@ejemplo.com",
+          comentarios: [],
+          tareas: []
+        },
+        "Proyecto Integral de Desarrollo": {
+          horario: "Jueves 18:00 - 23:00",
+          parcial: "20 de Octubre",
+          recuperatorio: "10 de Noviembre",
+          final: "25 de Diciembre",
+          profesores: "Prof. Pedro Sánchez",
+          email: "pedro.sanchez@ejemplo.com",
+          comentarios: [],
+          tareas: []
+        },
+        "Economía de la Empresa": {
+          horario: "Viernes 18:00 - 23:00",
+          parcial: "21 de Octubre",
+          recuperatorio: "11 de Noviembre",
+          final: "26 de Diciembre",
+          profesores: "Prof. Laura Fernández",
+          email: "laura.fernandez@ejemplo.com",
+          comentarios: [],
+          tareas: []
+        }
+      };
 
       let currentMateria = '';
 
@@ -368,7 +427,7 @@
         currentMateria = materia;
         const data = infoData[materia];
 
-        // Display static information about the subject
+        // Muestra la información estática sobre la materia
         document.getElementById('materiaTitle').innerText = materia;
         document.getElementById('horario').innerText = data.horario;
         document.getElementById('parcial').innerText = data.parcial;
@@ -377,7 +436,7 @@
         document.getElementById('profesores').innerText = data.profesores;
         document.getElementById('email').innerText = data.email;
 
-        // Retrieve comments from Firestore
+        // Recupera comentarios desde Firestore
         const qComments = query(collection(db, 'comentarios'), where('materia', '==', currentMateria), orderBy('timestamp'));
         const commentSnapshot = await getDocs(qComments);
         let comentarios = [];
@@ -387,7 +446,7 @@
         infoData[currentMateria].comentarios = comentarios;
         actualizarLista('comentariosList', comentarios, 'comentarios');
 
-        // Retrieve tasks from Firestore
+        // Recupera tareas desde Firestore
         const qTareas = query(collection(db, 'tareas'), where('materia', '==', currentMateria), orderBy('timestamp'));
         const tareaSnapshot = await getDocs(qTareas);
         let tareas = [];
