--- a/index.html
+++ b/index.html
@@ -70,22 +70,42 @@
         }
         /* Estilos para cada materia con colores más profesionales */
         .materia-1 {
-            background-color: #6c7a89; /* Gris medio */
+            background-color: #005F73; 
         }
         .materia-2 {
-            background-color: #95a5a6; /* Gris claro */
+            background-color: #0A9396; 
         }
         .materia-3 {
-            background-color: #2c3e50; /* Azul oscuro */
+            background-color: #94D2BD; 
         }
         .materia-4 {
-            background-color: #7f8c8d; /* Gris pizarra */
+            background-color: #EE9B00; 
         }
         .materia-5 {
-            background-color: #34495e; /* Azul pizarra */
+            background-color: #CA6702; 
         }
         .materia-6 {
-            background-color: #5d6d7e; /* Gris azulado */
+            background-color: #BB3E03; 
+        }
+
+        /* Estilos de hover para cada materia */
+        .materia-1:hover {
+            background-color: #003540;
+        }
+        .materia-2:hover {
+            background-color: #076466;
+        }
+        .materia-3:hover {
+            background-color: #70c3a7;
+        }
+        .materia-4:hover {
+            background-color: #bb7a00;
+        }
+        .materia-5:hover {
+            background-color: #974d02;
+        }
+        .materia-6:hover {
+            background-color: #892d02;
         }
         /* Estilo para celdas en blanco */
         .empty-cell {
