--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     <div class="container">
         <table id="horarioTable">
             <tr>
-                <th>Hora</th>
+                <th><button class="btn materia-1" onclick="window.location.href='https://console.firebase.google.com/project/horarios2024-657a6/database/horarios2024-657a6-default-rtdb/data?hl=es-419';">Link a la DB</button></th>
                 <th>Lunes</th>
                 <th>Martes</th>
                 <th>Miércoles</th>
@@ -288,7 +288,7 @@
                 <td><button class="btn materia-6" onclick="showInfo('Economía de la Empresa')">Economía de la Empresa</button></td>
             </tr>
         </table>
-
+       
         <div id="infoModule">
             <button class="close-btn" onclick="closeInfo()">X</button>
             <h2 id="materiaTitle">Materia</h2>
