--- a/index.html
+++ b/index.html
@@ -342,61 +342,61 @@
       const infoData = {
         "Taller de Emprendedorismo": {
           horario: "Martes 14:00 - 18:00",
-          parcial: "15 de Octubre",
-          recuperatorio: "5 de Noviembre",
-          final: "20 de Diciembre",
-          profesores: "Prof. Juan Pérez",
-          email: "juan.perez@ejemplo.com",
+          parcial: "-",
+          recuperatorio: "-",
+          final: "-",
+          profesores: "-",
+          email: "-",
           comentarios: [],
           tareas: []
         },
         "Seguridad Informática y Criptografía": {
           horario: "Lunes 18:00 - 23:00",
-          parcial: "17 de Octubre",
-          recuperatorio: "7 de Noviembre",
-          final: "22 de Diciembre",
-          profesores: "Prof. María García",
-          email: "maria.garcia@ejemplo.com",
+          parcial: "-",
+          recuperatorio: "-",
+          final: "-",
+          profesores: "German Bollman",
+          email: "-",
           comentarios: [],
           tareas: []
         },
         "Auditoría Informática": {
           horario: "Martes 18:00 - 23:00",
-          parcial: "18 de Octubre",
-          recuperatorio: "8 de Noviembre",
-          final: "23 de Diciembre",
-          profesores: "Prof. Carlos Martínez",
-          email: "carlos.martinez@ejemplo.com",
+          parcial: "-",
+          recuperatorio: "-",
+          final: "-",
+          profesores: "German Bollman",
+          email: "-",
           comentarios: [],
           tareas: []
         },
         "Gerenciamiento y Evaluación de Proyectos": {
           horario: "Miércoles 18:00 - 23:00",
-          parcial: "19 de Octubre",
-          recuperatorio: "9 de Noviembre",
-          final: "24 de Diciembre",
-          profesores: "Prof. Ana López",
-          email: "ana.lopez@ejemplo.com",
+          parcial: "-",
+          recuperatorio: "-",
+          final: "-",
+          profesores: "Liliana Radicce",
+          email: "-",
           comentarios: [],
           tareas: []
         },
         "Proyecto Integral de Desarrollo": {
           horario: "Jueves 18:00 - 23:00",
-          parcial: "20 de Octubre",
-          recuperatorio: "10 de Noviembre",
-          final: "25 de Diciembre",
-          profesores: "Prof. Pedro Sánchez",
-          email: "pedro.sanchez@ejemplo.com",
+          parcial: "-",
+          recuperatorio: "-",
+          final: "-",
+          profesores: "Jorge Nahas",
+          email: "-",
           comentarios: [],
           tareas: []
         },
         "Economía de la Empresa": {
           horario: "Viernes 18:00 - 23:00",
-          parcial: "21 de Octubre",
-          recuperatorio: "11 de Noviembre",
-          final: "26 de Diciembre",
-          profesores: "Prof. Laura Fernández",
-          email: "laura.fernandez@ejemplo.com",
+          parcial: "25 de Octubre",
+          recuperatorio: "29 de Noviembre (chequear)",
+          final: "-",
+          profesores: "Alejandro",
+          email: "-",
           comentarios: [],
           tareas: []
         }
