--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <div class="container">
         <table id="horarioTable">
             <tr>
-                <th>Hora</th>
+                <th><button class="btn materia-1" onclick="window.location.href='https://console.firebase.google.com/project/horarios2024-657a6/database/horarios2024-657a6-default-rtdb/data?hl=es-419';">Link a la Base de Datos</button></th>
                 <th>Lunes</th>
                 <th>Martes</th>
                 <th>Miércoles</th>
